<resources>
    <string name="app_name">Agro-Markt</string>
    <string name="title_home">Principal</string>
    <string name="title_dashboard">Productos</string>
    <string name="title_notifications">Notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeAppIntro">"¡Bienvenidos a la aplicación Agro-Markt! Esta aplicación fue diseñada específicamente para los campesinos y pequeños productores que no tienen recursos para establecer su propio local físico para la venta de sus productos. Con la aplicación Agro-Markt podrán crear su tienda electrónica, informar a sus clientes que productos están disponibles para a la venta y acordar la forma de entrega y pago. El objeto de Agro-Markt es convertirse en un medio fácil de usar para que los campesinos y pequeños productores del país puedan mediante la creación de una cuenta, subida de fotos de los productos y estableciendo precios empiezen a vender sus productos lo mas rapido y sencillo posible. "</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="subtitle">Inicia sesion y comienza a buscar y vender productos agropecuarios</string>
    <string name="email">Email</string>
    <string name="PasswordIntro">Password (contraseña)</string>
    <string name="btnLogin">Iniciar sesion</string>
    <string name="newUserString">Crea un usuario nuevo</string>
    <string name="welcomeAppNewUser">Crea una cuenta y comienza a buscar, comprar y vender productos agropecuarios. Ingresa los siguientes datos:</string>
    <string name="nameSignIn">Nombre</string>
    <string name="lastNameSignIn">Apellido</string>
    <string name="IDSignIn">Cédula</string>
    <string name="btnSignIn">Crear cuenta</string>
    <string name="search">Buscar</string>
    <string name="userNavMenu">Cuenta</string>
    <string name="alreadyAccount">¿Ya tienes una cuenta?</string>
    <string name="redirectLogin">¡Inicia sesion aqui!</string>
    <string name="noAccountYet">¿Aun no tienes una cuenta?</string>
    <string name="signInRedirect">Crea una aqui</string>
    <string name="accountMenu">Cuenta</string>
    <string name="publishText">Publicar</string>
    <string name="publishMenu">Publicar</string>
    <string name="welcomeAccount">Bienvenido, Diego</string>
    <string name="accountName">Nombre: </string>
    <string name="socialReason">Razón Social: </string>
    <string name="storeGrade">Calificacion de vendedor: </string>
    <string name="city">Ciudad: </string>
    <string name="hintName">Nombre</string>
    <string name="hintAddress">Dirección</string>
    <string name="hintPhone">Telefono</string>
    <string name="hintEmail">Correo Electronico</string>
    <string name="btSaveChanges">Guardar cambios</string>
    <string name="SReason">Razón Social</string>
    <string name="ciudad">Ciudad</string>
    <string name="storeDescription">Descripcion de tu tienda</string>
    <string name="lechugaCrespa">Lechuga crespa</string>
    <string name="priceLettuce">$ 2000 / libra</string>
    <string name="productDescription">La lechuga es una hortaliza consumida a nivel mundial y cuyo cultivo se ha extendido de forma asombrosa. Las partes más importantes de la lechuga son las hojas, las cuales tiene un alto contenido en fibra, Su sabor fresco combina con casi todos los ingredientes de las ensaladas</string>
    <string name="btAddProduct">Agregar al carrito</string>
    <string name="filter">Filter</string>
    <string name="notifications_message">Visualiza aqui las notificaciones y tus mensajes</string>
    <string name="next_notification">Por ahora no hay nada que ver aqui</string>
    <string name="publishMessage">Presiona el boton y publica tu primer producto agropercuario</string>
    <string name="btpublish">Boton Publicar</string>
    <string name="imageAccount">ImageAccount</string>
</resources>