<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/icono"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/cardCornerRadius"
        android:layout_gravity="center"
        android:elevation="3dp"/>

    <TextView
        android:id="@+id/tvLogInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/DefaultLayoutMargin"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:text="@string/subtitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:justificationMode="inter_word"
        android:layout_margin="@dimen/DefaultLayoutMargin"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textAlignment="center"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:textSize="15sp"
        android:textStyle="italic"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/PasswordIntro"
        android:textAlignment="center"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:textSize="15sp"
        android:textStyle="italic"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button_up"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:elevation="3dp"
        android:text="@string/btnLogin"/>
        <!--android:onClick="sendMessage"-->
</LinearLayout>