<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/ibPhotoAdmin"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/imageAccount"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile" />

                    <EditText
                        android:id="@+id/etNameAdmin"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintName"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etAddressAdmin"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintAddress"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etPhoneAdmin"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintPhone"
                        android:inputType="text|phone"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etEmailAdmin"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintEmail"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etSocialReason"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/SReason"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/etCity"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/ciudad"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etStoreDescription"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:gravity="center_horizontal"
                        android:hint="@string/storeDescription"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <Button
                        android:id="@+id/btSaveChanges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/DefaultLayoutMargin"
                        android:background="@drawable/my_button_up"
                        android:elevation="3dp"
                        android:fontFamily="@font/rubik_variablefont_wght"
                        android:text="@string/btSaveChanges"
                        android:textColor="@color/primaryTextColor" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_anchor="@+id/scrollView2"
                        app:layout_anchorGravity="bottom|center"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
