<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.agro_markt.view.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.agro_markt.view.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_publish"
            app:destination="@id/navigation_publish" />
        <action
            android:id="@+id/action_navigation_dashboard_to_dashboardDetailDialog"
            app:destination="@id/dashboardDetailDialog" />
        <action
            android:id="@+id/action_navigation_dashboard_to_searchDetailDialog"
            app:destination="@id/searchDetailDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.agro_markt.view.ui.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_notifications_to_notificationsDetailDialog"
            app:destination="@id/notificationsDetailDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.agro_markt.view.ui.fragments.AccountFragment"
        android:label="@string/accountMenu"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_navigation_account_to_navigation_accountDetailDialog"
            app:destination="@id/navigation_accountDetailDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_publish"
        android:name="com.example.agro_markt.view.ui.fragments.PublishFragment"
        android:label="@string/publishMenu"
        tools:layout="@layout/fragment_publish">
        <action
            android:id="@+id/action_navigation_publish_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_publish_to_publishDetailDialog"
            app:destination="@id/publishDetailDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_accountDetailDialog"
        android:name="com.example.agro_markt.view.ui.fragments.AccountDetailDialogFragment"
        android:label="AccountDetailFragmentDialog"
        tools:layout="@layout/fragment_account_detail_dialog">

        <action
            android:id="@+id/action_navigation_accountDetailDialog_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

<!--    <dialog-->
<!--        android:id="@+id/accountDetailDialog"-->
<!--        android:label="AccountDetailDialog"-->
<!--        tools:layout="@layout/fragment_account_detail_dialog"/>-->
    <dialog
        android:id="@+id/dashboardDetailDialog"
        android:label="DashboardDetailDialog"
        tools:layout="@layout/fragment_dashboard_detail_dialog"/>
    <dialog
        android:id="@+id/notificationsDetailDialog"
        android:label="NotificationsDetailDialog"
        tools:layout="@layout/fragment_notifications_detail_dialog"/>
    <dialog
        android:id="@+id/publishDetailDialog"
        android:label="PublishDetailDialog"
        tools:layout="@layout/fragment_publish_detail_dialog"/>
    <dialog
        android:id="@+id/searchDetailDialog"
        android:label="SearchDetailDialog"
        tools:layout="@layout/fragment_search_detail_dialog"/>



</navigation>