<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation"
                    android:layout_margin="@dimen/DefaultLayoutMargin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/heightImageProduct"
                            android:src="@drawable/lechuga_crespa"
                            android:layout_margin="@dimen/DefaultLayoutMargin"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lechugaCrespa"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/sizeNameProduct"
                            android:fontFamily="@font/rubik_variablefont_wght"
                            android:textColor="@color/primaryTextColor"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/priceLettuce"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/sizePriceProduct"
                            android:fontFamily="@font/rubik_variablefont_wght"
                            android:textColor="@color/primaryTextColor"/>

                        <TextView
                            android:id="@+id/tvHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/DefaultLayoutMargin"
                            android:fontFamily="@font/rubik_variablefont_wght"
                            android:gravity="fill_horizontal"
                            android:text="@string/productDescription"
                            android:textColor="@color/primaryTextColor"
                            android:justificationMode="inter_word"
                            android:textSize="@dimen/textSizeContent" />
                        <Button
                            android:id="@+id/btBuyProduct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/btAddProduct"
                            android:fontFamily="@font/rubik_variablefont_wght"
                            android:textColor="@color/primaryTextColor"
                            android:layout_marginTop="@dimen/DefaultLayoutMargin"
                            android:background="@drawable/my_button_up"
                            android:elevation="2dp"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>